--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,110 @@ img{
     margin-bottom: 50px; 
 }
 /* Modal form */
+.form-group:hover .form-icon, .form-group:focus .form-icon {
+    fill: var(--accent-color);
+}
+.form-group{
+    position: relative;
+}
+.form-icon{
+    position: absolute;
+    bottom: 11px;
+    left: 12px;
+}
+.form-title{
+    display: block;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    color: var(--title-text-color);
+}
+.form-group{
+    display: block;
+    margin-bottom: 10px;
+}
+.form-label{
+    display: block;
+    margin-bottom: 4px;
+    text-align: left;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: var(--primary-text-color);
+}
+.form-text{
+    resize: none;
+    width: 100%;
+    padding: 12px 16px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-group:hover .form-input,
+.form-group:focus .form-input,
+.form-group:hover .form-text,
+.form-group:focus .form-text {
+    border: 1px solid var(--accent-color);
+}
+.form-policy-group{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.custom-checkbox{
+    width: 16px;
+    height: 15px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: 2px solid #212121;
+    outline-offset: -2px;
+    border-radius: 3px;
+    transition: backround-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.custom-checkbox-icon{
+    opacity: 0;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked+.custom-checkbox .custom-checkbox-icon{
+    opacity: 1;
+    fill: var(--white);
+}
+.checkbox:checked+.custom-checkbox{
+    background-color: var(--accent-color);
+    outline: transparent;
+}
+.form-input{
+    width: 100%;
+    padding: 11px 35px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.accent-discription{
+    color: var(--accent-color);
+}
+.submit-btn{
+    margin-top: 30px;
+    background-color: var(--accent-color);
+    color: var(--white);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    padding: 10px 55px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
 .backdrop{
     position: fixed;
     top: 0;
@@ -235,6 +339,10 @@ img{
     border-radius: 50%;
     background-color: transparent;
     cursor: pointer;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover .modal-icon, .modal-btn:focus .moda-icon{
+    fill: var(--accent-color);
 }
 .backdrop.is-hidden .modal-wrapper{
     transform: translate(-50%, -50%) scale(0.8)
@@ -243,9 +351,9 @@ img{
     position: absolute;
     top: 50%;
     left: 50%;
+    padding: 40px;
     background-color: var(--white);
     width: 528px;
-    height: 581px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
     transform: translate(-50%, -50%) scale(1);
@@ -432,6 +540,9 @@ margin-right: 30px;
     cursor: pointer;
 }
 /* Footer */
+.footer-socials{
+    margin-right: 70px;
+}
 .container-adress{
     margin-right: 70px;
 }
@@ -460,6 +571,7 @@ margin-right: 30px;
     fill: var(--white);
 }
 .footer-title{
+    display: block;
     font-size: 14px;
     font-weight: 700;
     line-height: 16px;
@@ -502,6 +614,41 @@ margin-right: 30px;
 .main-footer{
     padding-top: 60px;
     padding-bottom: 60px;
+}
+.footer-form-group{
+    display: flex;
+}
+.footer-submit-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px 29px;
+    color: var(--white);
+    background-color: var(--accent-color);
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+}
+.footer-form-icon{
+    fill: var(--white);
+    margin-left: 10px;
+}
+.footer-input{
+    width: 350px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    background-color: transparent;
+    margin-right: 12px;
+    padding: 15px 16px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    outline: none;
 }
 /* Portfolio */
 .header-portfolio{
