--- a/css/styles.css
+++ b/css/styles.css
@@ -167,6 +167,10 @@ img{
     border: none;
     min-width: 200px;
     min-height: 50px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-hero:hover, .button-hero:focus{
+    background-color: var(--primary-text-color);
 }
 .section-hero{
     background-image: linear-gradient(var(--hero),var(--hero)), 
@@ -207,9 +211,6 @@ img{
     margin-bottom: 50px; 
 }
 /* Modal form */
-.form-group:hover .form-icon, .form-group:focus .form-icon {
-    fill: var(--accent-color);
-}
 .form-group{
     position: relative;
 }
@@ -217,6 +218,11 @@ img{
     position: absolute;
     bottom: 11px;
     left: 12px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-group:hover .form-icon,
+.form-group:focus-within .form-icon {
+    fill: var(--accent-color);
 }
 .form-title{
     display: block;
@@ -241,6 +247,14 @@ img{
     letter-spacing: 0.01em;
     color: var(--primary-text-color);
 }
+.form-input {
+    width: 100%;
+    padding: 11px 35px;
+    outline: transparent;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .form-text{
     resize: none;
     width: 100%;
@@ -251,9 +265,9 @@ img{
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-group:hover .form-input,
-.form-group:focus .form-input,
+.form-group:focus-within .form-input,
 .form-group:hover .form-text,
-.form-group:focus .form-text {
+.form-group:focus-within .form-text {
     border: 1px solid var(--accent-color);
 }
 .form-policy-group{
@@ -287,14 +301,6 @@ img{
     background-color: var(--accent-color);
     outline: transparent;
 }
-.form-input{
-    width: 100%;
-    padding: 11px 35px;
-    outline: transparent;
-    border-radius: 4px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .accent-discription{
     color: var(--accent-color);
 }
@@ -302,6 +308,7 @@ img{
     margin-top: 30px;
     background-color: var(--accent-color);
     color: var(--white);
+    cursor: pointer;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.88;
@@ -310,6 +317,10 @@ img{
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
+    transition: backround-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.submit-btn:hover, .submit-btn:focus{
+    background-color: var(--primary-text-color);
 }
 .backdrop{
     position: fixed;
@@ -341,7 +352,7 @@ img{
     cursor: pointer;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-btn:hover .modal-icon, .modal-btn:focus .moda-icon{
+.modal-btn:hover .modal-icon, .modal-btn:focus-within .moda-icon{
     fill: var(--accent-color);
 }
 .backdrop.is-hidden .modal-wrapper{
@@ -543,6 +554,9 @@ margin-right: 30px;
 .footer-socials{
     margin-right: 70px;
 }
+.footer-socials-list{
+    display: flex;
+}
 .container-adress{
     margin-right: 70px;
 }
@@ -623,6 +637,7 @@ margin-right: 30px;
     align-items: center;
     justify-content: center;
     padding: 10px 29px;
+    cursor: pointer;
     color: var(--white);
     background-color: var(--accent-color);
     border: none;
@@ -632,16 +647,22 @@ margin-right: 30px;
     font-size: 16px;
     line-height: 1.88;
     letter-spacing: 0.06em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-form-icon{
     fill: var(--white);
     margin-left: 10px;
 }
+.footer-submit-btn:hover, .footer-submit-btn:focus{
+    background-color: var(--primary-text-color);
+}
 .footer-input{
-    width: 350px;
+    width: 358px;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25;
+    color: var(--white);
     background-color: transparent;
     margin-right: 12px;
     padding: 15px 16px;
@@ -649,6 +670,10 @@ margin-right: 30px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     outline: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-input:hover, .footer-input:focus{
+    border: 1px solid var(--accent-color);
 }
 /* Portfolio */
 .header-portfolio{
