--- a/css/styles.css
+++ b/css/styles.css
@@ -218,7 +218,7 @@ img{
     position: absolute;
     bottom: 11px;
     left: 12px;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-group:hover .form-icon,
 .form-group:focus-within .form-icon {
@@ -317,7 +317,7 @@ img{
     border: none;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
-    transition: backround-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .submit-btn:hover, .submit-btn:focus{
     background-color: var(--primary-text-color);
@@ -670,7 +670,7 @@ margin-right: 30px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     outline: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .footer-input:hover, .footer-input:focus{
     border: 1px solid var(--accent-color);
